# OmatePOC

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
omate/: __init__.py  config.py  demo_dashboard.py  demo_full.py  demo_signal.py
omate/agent/: __init__.py  graph.py  state.py  tools.py
omate/dashboard/: __init__.py  terminal.py
omate/fhir/: __init__.py  store.py
omate/monitoring/: __init__.py  drift_detector.py  mlflow_tracker.py
omate/rag/: __init__.py  engine.py  guards.py  llm.py
omate/serving/: __init__.py  triton_client.py
omate/signal/: __init__.py  anomaly.py  denoising.py  ecg_classifier.py  loader.py  pipeline.py
scripts/: download_mitbih.py
tests/: test_agent.py  test_monitoring.py  test_rag.py  test_serving.py  test_signal.py
