[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omate-poc"
version = "0.1.0"
description = "Real-time clinical AI system POC — signal denoising, zero-hallucination RAG, agentic monitoring"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "PyWavelets>=1.4.1",
    "torch>=2.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev       = ["pytest>=7.4.0"]
openai    = ["openai>=1.12.0"]
anthropic = ["anthropic>=0.25.0"]
ollama    = ["requests>=2.31.0"]
mlflow    = ["mlflow>=2.12.0"]
langgraph = ["langgraph>=0.1.0", "langchain-core>=0.1.0"]
mitbih    = ["wfdb>=4.1.2"]
all       = [
    "openai>=1.12.0",
    "anthropic>=0.25.0",
    "requests>=2.31.0",
    "mlflow>=2.12.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["omate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
